# sytra-studio

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  PRODUCT.md  README.md  all-phases.md  phase0.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/sytra-contracts/: Cargo.toml
crates/sytra-contracts/src/: catalog.json  guider.rs  lib.rs  merge_config.rs  operation.rs  run_config.rs  telemetry.rs
crates/sytra-contracts/tests/: golden_roundtrip.rs
crates/sytra-host/: Cargo.toml
crates/sytra-host/src/: backend_resolver.rs  commands.rs  env_provisioner.rs  job_runner.rs  lib.rs  materialize.rs  resource_guard.rs  run_archive.rs  settings.rs  validate.rs
crates/sytra-host/src/datasource/: hf.rs  klayer.rs  local.rs  mod.rs  synthetic.rs
crates/sytra-host/tests/: golden_transcripts.rs  host_orchestration.rs  subprocess_boundary.rs
crates/sytra-mcp/: Cargo.toml
crates/sytra-mcp/src/: main.rs
crates/sytra-mcp/tests/: mcp_protocol.rs
fixtures/: data.golden.jsonl  merge.golden.transcript.jsonl  merge.golden.yaml  run.golden.transcript.jsonl  run.golden.yaml
integrations/: README.md
npm/: package.json  prep.js
runner/: pyproject.toml
runner/sytra_runner/: __main__.py  config.py  merge.py  publish.py  synth.py  telemetry.py  train.py
runner/sytra_runner/backends/: unsloth_sft.py
runner/tests/: test_config.py  test_telemetry.py  test_unsloth_sft.py
scripts/: download_external_datasets.py  merge_adapter_for_export.py  move-pagefile-to-d.ps1  prepare_complete_training_datasets.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  playwright.config.ts
ui/src/: App.svelte  api.ts  app.css  i18n.svelte.ts  main.ts  store.svelte.ts  types.ts
ui/src/components/: Guider.svelte  Help.svelte  LiveView.svelte  MergeForm.svelte  Runs.svelte  Settings.svelte  Sidebar.svelte  SimpleMerge.svelte  SimpleTrain.svelte  Toast.svelte  TrainForm.svelte
ui/tests/: studio.spec.ts
