[workspace]
resolver = "2"
members = [
    "crates/sytra-contracts",
    "crates/sytra-host",
    "crates/sytra-mcp",
    "src-tauri",
]

[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
polars = { version = "0.36", default-features = false, features = ["csv", "parquet", "lazy", "dtype-struct"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
