[project]
name = "sytra-runner"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sytra_runner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
