[package]
name = "sytra-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sytra-mcp"
path = "src/main.rs"

[dependencies]
sytra-contracts = { path = "../sytra-contracts" }
sytra-host = { path = "../sytra-host" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
uuid.workspace = true
tokio = { version = "1", features = ["rt"] }
